# getMedia

./: .gitignore  0_getMediaFromTel.py  0_media_messages.py  Free_Books_life.html  README.md  SherwinVakiliLibrary.html  __init__.py  activate_env.sh  analyze_document_names.py  analyze_telegram_data.py  analyze_text_sizes.py  books.html  books_magazine.html  collect_new_messages.py  config.py  convert_legacy_json.py  export_telegram_messages.py  export_telegram_messages_pandas.py  fix_channel_specific_totals.py  getMedia.code-workspace  index.html  main.py  pandas_json_demo.py  projects.html  pyproject.toml  requirements.txt  requirements_pandas.txt  requirements_visualization.txt  run_tests.py  simple_chart_test.html  test_api_error.py  test_api_only.py  test_api_output_paths.py  test_chart.html  test_dashboard.html  test_diff_output_paths.py  test_file_only.py  test_file_output_paths.py  update_ga_id.py  validate_config.py
data/: dashboard-data.json
docs/: 0_ANALYSIS_REQUIREMENT_SPEC.md  1_ANALYSIS_DESIGN_GENERAL.md  1_ANALYSIS_GENERAL_DESIGN.md  2_ANALYSIS_DETAIL_DESIGN.md  3_ANALYSIS_IMPLEMENTATION_PLAN.md  ANALYSIS_COMMAND_DESIGN.md  ANALYSIS_COMMAND_IMPLEMENTATION.md  ANALYSIS_IMPLEMENTATION_GUIDELINE.md  ANALYSIS_IMPLEMENTATION_SPEC.md  DASHBOARD_GENERAL_DESIGN.md  DASHBOARD_IMPLEMENTATION_GUIDELINE.md  DASHBOARD_IMPLEMENTATION_SPEC.md  DIRECTORY_TREE.md  FILE_ORGANIZATION_DESIGN.md  GOOGLE_ANALYTICS_SETUP.md  IMPLEMENTATION_GUIDELINE.md  README.md  README_MODULAR.md  REPORT_COMMAND_DOCUMENTATION.md  TODO.md  manage_media_messages.md
modules/: __init__.py  analysis.py  analysis_processor.py  analyze_processor.py  analyze_processor_backup.py  analyze_processor_jinja2.py  channel_reporter.py  combine_processor.py  dashboard_generator.py  dashboard_orchestrator.py  dashboard_processor.py  dashboard_renderer.py  database_service.py  db_report_processor.py  diff_utility.py  file_manager.py  file_report_processor.py  import_processor.py  models.py  report_generator.py  retry_handler.py  stats_service.py  telegram_analyzer.py  telegram_collector.py  telegram_exporter.py
prototypes/: README.md  channel-books.html  index.html  mobile-demo.html
static/css/: dashboard.css
static/js/: dashboard_new.js
templates/: base.html  dashboard_channel.html  dashboard_index.html
templates/components/charts/: bar_chart.html  histogram.html  pie_chart.html  time_series.html
templates/dashboard/: channel.html  index.html
templates/pages/: channel_dashboard.html  index.html
tests/: README.md  __init__.py  conftest.py  test_analysis_foundation.py  test_channel_reporter.py  test_dashboard_generator.py  test_database_service.py  test_import_processor.py  test_integration.py  test_models.py  test_telegram_collector.py
