[project]
name = "telegram-media-library"
version = "0.1.0"
description = "Telegram Media Library - Collect, analyze, and manage Telegram messages and media"
authors = [
    {name = "Shahram", email = "shahram@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "aiohttp>=3.8.0",
    "telethon>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "openpyxl>=3.1.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
